# rooks_dance

./: .gitignore  README.md
src/: BoardManager.cpp  BoardManager.h  BoardMng.cpp  BoardMng.h  CMakeLists.txt  CommonTypes.h  ConcurrentQueue.h  FieldDrawer.h  LogMessages.h  RandUtils.cpp  RandUtils.h  Rook.h  RookHandler.cpp  RookHandler.h  main.cpp
